<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <import type="android.view.View"/>
        <variable
            name="viewModel"
            type="com.sunwise.practicaltest.view.vm.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.ui.LoginFragment">

        <ImageView
            android:layout_width="@dimen/no_dp"
            android:layout_height="@dimen/no_dp"
            android:src="@drawable/ic_pokebola"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            app:layout_constraintHeight_percent="@dimen/login_header_image_height"
            app:layout_constraintWidth_percent="@dimen/login_header_image_width"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toTopOf="@id/tilEmail"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_email"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:layout_marginBottom="@dimen/margin_default"
            app:layout_constraintBottom_toTopOf="@id/glMiddleVertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:lines="1"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/glMiddleVertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="@dimen/login_guide_middle_vertical"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tilPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/login_password"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            app:layout_constraintTop_toBottomOf="@id/glMiddleVertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPassword"
                android:lines="1"
                android:singleLine="true"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:visibility="@{viewModel.loadingLiveData ? View.GONE : View.VISIBLE}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:text="@string/login_btn_login"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"/>

        <ProgressBar
            android:visibility="@{viewModel.loadingLiveData ? View.VISIBLE : View.GONE}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginHorizontal="@dimen/margin_default"
            android:text="@string/login_btn_login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tilPassword"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>