...
            app:destination="@id/loginFragment" />
        <action
            app:launchSingleTop="true"
            app:popUpTo="@id/splashFragment"
            app:popUpToInclusive="true"
            android:id="@+id/action_splashFragment_to_mainFragment"
            app:destination="@id/mainFragment" />
    </fragment>
    <fragment
        android:id="@+id/loginFragment"
        android:name="com.sunwise.practicaltest.view.ui.LoginFragment"
        tools:layout="@layout/fragment_login"
        android:label="LoginFragment" >
...
